kubernates/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/mf-net: "true"
        io.kompose.service: rabbitmq
    spec:
      containers:
        - env:
            - name: RABBITMQ_ERL_COOKIE
              value: s3cr3tc00ki3
            - name: RABBITMQ_PASSWORD
              value: "1234"
            - name: RABBITMQ_USERNAME
              value: test
          image: bitnami/rabbitmq
          name: rabbitmq-tools
          ports:
            - containerPort: 15672
          resources: {}
      restartPolicy: Always
status: {}
