kubernates/cloudsql-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: cloudsql
  name: cloudsql
spec:
  ports:
    - name: "4446"
      port: 4446
      targetPort: 3306
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: cloudsql
status:
  loadBalancer: {}
