kubernates/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  ports:
    - name: "3333"
      port: 3333
      targetPort: 3306
  selector:
    io.kompose.service: database
status:
  loadBalancer: {}
