kubernates/mailtrap-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: mailtrap
  name: mailtrap
spec:
  ports:
    - name: "1030"
      port: 1030
      targetPort: 1025
    - name: "8035"
      port: 8035
      targetPort: 8025
  selector:
    io.kompose.service: mailtrap
status:
  loadBalancer: {}
