kubernates/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  ports:
    - name: "7004"
      port: 7004
      targetPort: 6379
  selector:
    io.kompose.service: redis
status:
  loadBalancer: {}
